# normeval

./: README.MD  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
src/normeval/: __init__.py  evaluator.py
